--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Telegram Bot Token (get from @BotFather on Telegram)
-BOT_TOKEN='8299929776:AAGKU7rkfakmDBXdgiGSWzAHPgLRJs-twZg'
+TELEGRAM_BOT_TOKEN='8299929776:AAGKU7rkfakmDBXdgiGSWzAHPgLRJs-twZg'
 
 # Telegram Chat ID (use @userinfobot to get your chat ID)
-CHAT_ID='-1003177936060'
+TELEGRAM_CHAT_ID='-1003177936060'
