--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-# Telegram Bot Token (get from @BotFather on Telegram)
-TELEGRAM_BOT_TOKEN='8299929776:AAGKU7rkfakmDBXdgiGSWzAHPgLRJs-twZg'
-
-# Telegram Chat ID (use @userinfobot to get your chat ID)
-TELEGRAM_CHAT_ID='-1003177936060'
+TELEGRAM_BOT_TOKEN=8299929776:AAGKU7rkfakmDBXdgiGSWzAHPgLRJs-twZg
+TELEGRAM_CHAT_ID=-1003177936060
+FOREXFACTORY_NEWS_URL=https://www.forexfactory.com/news
+FETCH_INTERVAL_SEC=300
