--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 TELEGRAM_BOT_TOKEN=8299929776:AAGKU7rkfakmDBXdgiGSWzAHPgLRJs-twZg
 TELEGRAM_CHAT_ID=-1003177936060
 FOREXFACTORY_NEWS_URL=https://www.forexfactory.com/news
-FETCH_INTERVAL_SEC=300
+FF_CALENDAR_URL = https://www.forexfactory.com/calendar
+FETCH_INTERVAL_SEC=1
