--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-requests
+python-dotenv
 beautifulsoup4
-python-telegram-bot==13.15
 googletrans==4.0.0rc1
 python-dotenv
+python-telegram-bot==13.15
+requests
