--- a/.github/workflows/bot-test.yml
+++ b/.github/workflows/bot-test.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run bot
         env:
-          TELEGRAM_BOT_TOKEN: {{secrets.TELEGRAM_BOT_TOKEN}} 
+          TELEGRAM_BOT_TOKEN: {{ secrets.TELEGRAM_CHAT_ID }}
           TELEGRAM_CHAT_ID: {{ secrets.TELEGRAM_CHAT_ID }}
 
         run: |
