--- a/.github/workflows/bot-test.yml
+++ b/.github/workflows/bot-test.yml
@@ -1,7 +1,7 @@
 name: Run Telegram Bot
 
 on:
-  workflow_dispatch:  # Manually trigger karanna puluwan
+  workflow_dispatch:
 
 jobs:
   run-bot:
@@ -23,8 +23,8 @@ jobs:
 
       - name: Run bot
         env:
-          TELEGRAM_BOT_TOKEN: {{ secrets.TELEGRAM_CHAT_ID }}
-          TELEGRAM_CHAT_ID: {{ secrets.TELEGRAM_CHAT_ID }}
-
+          TELEGRAM_BOT_TOKEN: secrets.TELEGRAM_BOT_TOKEN 
+          TELEGRAM_CHAT_ID:{{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           python main.py
+
