--- a/.github/workflows/bot-test.yml
+++ b/.github/workflows/bot-test.yml
@@ -18,13 +18,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install –upgrade pip
           pip install -r requirements.txt
 
       - name: Run bot
         env:
-          TELEGRAM_BOT_TOKEN: secrets.TELEGRAM_BOT_TOKEN 
-          TELEGRAM_CHAT_ID:{{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_BOT_TOKEN:{{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          python main.py
+          python main.py 
 
