--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TELEGRAM_BOT_TOKEN=8299929776:AAGKU7rkfakmDBXdgiGSWzAHPgLRJs-twZg
-TELEGRAM_CHAT_ID=-1003177936060
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
 FOREXFACTORY_NEWS_URL=https://www.forexfactory.com/news
 FF_CALENDAR_URL = https://www.forexfactory.com/calendar
 FETCH_INTERVAL_SEC=1
