--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_CHAT_ID=
+TELEGRAM_BOT_TOKEN=8382727460:AAEgKVISJN5TTuV4O-82sMGQDG3khwjiKR8
+TELEGRAM_CHAT_ID=-1003111341307
 FOREXFACTORY_NEWS_URL=https://www.forexfactory.com/news
 FF_CALENDAR_URL = https://www.forexfactory.com/calendar
 FETCH_INTERVAL_SEC=1
